[gd_scene load_steps=2 format=3 uid="uid://dfl7fr3ridwea"]

[ext_resource type="Script" path="res://Delay.gd" id="1_ku10f"]

[node name="Delay" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"Metal"
script = ExtResource("1_ku10f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 57

[node name="Delay" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Delay"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Active"

[node name="Remove" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Remove Effect"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/v_separation = 20
columns = 3

[node name="Prop1" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Dry"

[node name="Prop11" type="HSlider" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="Prop111" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "50"

[node name="Separator" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Tap 1"

[node name="Separator2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Separator3" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Prop2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Active"

[node name="Prop22" type="CheckButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
alignment = 1
icon_alignment = 1
expand_icon = true

[node name="Prop222" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Prop3" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Delay (ms)"

[node name="Prop33" type="SpinBox" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 30000.0
value = 16000.0

[node name="Prop333" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "
"

[node name="Prop4" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "level (db)"

[node name="Prop44" type="HSlider" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -60.0
max_value = 0.0
step = 0.01

[node name="Prop444" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "50
"

[node name="Prop5" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Pan"

[node name="Prop55" type="HSlider" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="Prop555" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "50
"

[node name="Separator4" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Tap 2"

[node name="Separator5" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Separator6" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Prop6" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Active"

[node name="Prop66" type="CheckButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
alignment = 1
icon_alignment = 1
expand_icon = true

[node name="Prop666" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Prop7" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Delay (ms)"

[node name="Prop77" type="SpinBox" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 30000.0
value = 16000.0

[node name="Prop777" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "
"

[node name="Prop8" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "level (db)"

[node name="Prop88" type="HSlider" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -60.0
max_value = 0.0
step = 0.01

[node name="Prop888" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "50
"

[node name="Prop9" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Pan"

[node name="Prop99" type="HSlider" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="Prop999" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "50
"

[node name="Separator7" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Feedback"

[node name="Separator8" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Separator9" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Prop10" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Active"

[node name="Prop1010" type="CheckButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
icon_alignment = 1
expand_icon = true

[node name="Prop101010" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Prop12" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Delay (ms)"

[node name="Prop1212" type="SpinBox" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 30000.0
value = 16000.0

[node name="Prop121212" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "
"

[node name="Prop13" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "level (db)"

[node name="Prop1313" type="HSlider" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -60.0
max_value = 0.0
step = 0.01

[node name="Prop131313" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "50
"

[node name="Prop14" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Low-Pass"

[node name="Prop1414" type="SpinBox" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 30000.0
value = 16000.0

[node name="Prop141414" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "
"

[connection signal="toggled" from="VBoxContainer/HBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Remove" to="." method="_on_remove_button_down"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/Prop11" to="." method="_on_prop_11_value_changed"]
[connection signal="toggled" from="VBoxContainer/GridContainer/Prop22" to="." method="_on_prop_22_toggled"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/Prop33" to="." method="_on_prop_33_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/Prop44" to="." method="_on_prop_44_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/Prop55" to="." method="_on_prop_55_value_changed"]
[connection signal="toggled" from="VBoxContainer/GridContainer/Prop66" to="." method="_on_prop_66_toggled"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/Prop77" to="." method="_on_prop_77_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/Prop88" to="." method="_on_prop_88_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/Prop99" to="." method="_on_prop_99_value_changed"]
[connection signal="toggled" from="VBoxContainer/GridContainer/Prop1010" to="." method="_on_prop_1010_toggled"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/Prop1212" to="." method="_on_prop_1212_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/Prop1313" to="." method="_on_prop_1313_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/Prop1414" to="." method="_on_prop_1414_value_changed"]
